--- a/src/pages/dashboard/pendaftar-beasiswa/index.astro
+++ b/src/pages/dashboard/pendaftar-beasiswa/index.astro
@@ -1,8 +1,8 @@
 ---
-import DashboardLayout from "../../../layout/dashboard-admin.astro";
+import AdminLayout from "../../../layout/admin-layout.astro";
 import PendaftarBeasiswaPage from "../../../component/admin/pendaftar-beasiswa-page";
 ---
 
-<DashboardLayout title="Pendaftar Beasiswa">
+<AdminLayout title="Pendaftar Beasiswa - Admin Dashboard Bersekolah">
   <PendaftarBeasiswaPage client:load />
-</DashboardLayout>
+</AdminLayout>
